# pytest-human

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  tox.ini
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: main.yml  release.yml
assets/: test_pizza.html
src/pytest_human/: _hooks.py  html_format.py  html_handler.py  html_report.py  human.py  log.py  plugin.py  repo.py  tracing.py
src/pytest_human/templates/: script.js  styles.css
tests/: conftest.py  playwright_fixtures.py  test_artifacts.py  test_example.py  test_exception.py  test_header.py  test_logging.py  test_parameterized.py  test_pizza_example.py  test_search.py  test_source.py  test_tracing.py  utils.py
tests/examples/: external_delivery.py  test_api.py  test_example.py  test_pizza.py
tests/unit/: test_flags.py  test_repo.py
